test/e2e/testdata/load_balancing_backend_utilization_weighted_zones.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-backend-utilization-weighted-zones
  namespace: gateway-conformance-infra
spec:
  selector:
    app: lb-backend-utilization-weighted-zones
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-backend-high-util-zone1
  namespace: gateway-conformance-infra
  labels:
    app: lb-backend-utilization-weighted-zones
    util: high
    zone: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lb-backend-utilization-weighted-zones
      util: high
      zone: "1"
  template:
    metadata:
      labels:
        app: lb-backend-utilization-weighted-zones
        util: high
        zone: "1"
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: "1"
      containers:
      - name: backend
        image: envoyproxy/gateway-backend-utilization:latest
        imagePullPolicy: IfNotPresent
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SERVICE_NAME
          value: lb-backend-utilization-weighted-zones
        - name: ORCA_CPU_UTILIZATION
          value: "0.9"
        resources:
          requests:
            cpu: 10m
        readinessProbe:
          httpGet:
            path: /
            port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-backend-low-util-zone2
  namespace: gateway-conformance-infra
  labels:
    app: lb-backend-utilization-weighted-zones
    util: low
    zone: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lb-backend-utilization-weighted-zones
      util: low
      zone: "2"
  template:
    metadata:
      labels:
        app: lb-backend-utilization-weighted-zones
        util: low
        zone: "2"
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: "2"
      containers:
      - name: backend
        image: envoyproxy/gateway-backend-utilization:latest
        imagePullPolicy: IfNotPresent
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SERVICE_NAME
          value: lb-backend-utilization-weighted-zones
        - name: ORCA_CPU_UTILIZATION
          value: "0.1"
        resources:
          requests:
            cpu: 10m
        readinessProbe:
          httpGet:
            path: /
            port: 3000
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend-utilization-weighted-zones-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: backend-utilization-weighted-zones-route
  loadBalancer:
    type: BackendUtilization
    backendUtilization:
      blackoutPeriod: 1ms
      weightUpdatePeriod: 100ms
    zoneAware:
      weightedZones:
      - zone: "1"
        weight: 90
      - zone: "2"
        weight: 10
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-utilization-weighted-zones-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /backend-utilization-weighted-zones
    backendRefs:
    - name: lb-backend-utilization-weighted-zones
      port: 8080
